AnalizadorLexico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACORCHETE
    AMPERSANT
    APOSTROFE
    BREAK
    CASE
    CCORCHETE
    COMENTARIO
    COMILLAS
    COMMENTS
    COMMENTS_C99
    CONST
    CONTINUE
    DOSPUNTOS
    DPUNTOS_DPUNTOS
    FUNCT_FLECHA
    HASHTAG
    INCREMENTO
    MASMAS
    MENOSMENOS
    NOT
    PUNTO
    STRUCT
    SWITCH
    TYPEDEF
    XOR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funciones
Rule 2     funciones -> funcion
Rule 3     funciones -> funciones funcion
Rule 4     funcion -> tipo_dato ID APAREN parametros CPAREN ALLAVE declaraciones return CLLAVE
Rule 5     return -> RETURN ID PUNTOCOMA
Rule 6     return -> RETURN expresion PUNTOCOMA
Rule 7     return -> empty
Rule 8     parametros -> parametro
Rule 9     parametros -> parametro COMA parametros
Rule 10    parametros -> empty
Rule 11    empty -> <empty>
Rule 12    parametro -> tipo_dato ID
Rule 13    tipo_dato -> INT
Rule 14    tipo_dato -> CHAR
Rule 15    tipo_dato -> FLOAT
Rule 16    declaraciones -> declaracion
Rule 17    declaraciones -> declaraciones declaracion
Rule 18    declaracion -> asignacion
Rule 19    declaracion -> declara
Rule 20    declaracion -> condicional
Rule 21    declaracion -> iteracion
Rule 22    declaracion -> impresion
Rule 23    declaracion -> entrada
Rule 24    asignacion -> ID ASIGNAR expresion PUNTOCOMA
Rule 25    declara -> tipo_dato ID PUNTOCOMA
Rule 26    declara -> tipo_dato ID ASIGNAR expresion PUNTOCOMA
Rule 27    expresion -> expresion_aritmetica
Rule 28    expresion -> expresion_logica
Rule 29    expresion -> expresion_comparacion
Rule 30    expresion -> ID
Rule 31    expresion -> constante
Rule 32    expresion_aritmetica -> expresion SUMA expresion
Rule 33    expresion_aritmetica -> expresion RESTA expresion
Rule 34    expresion_aritmetica -> expresion MULTI expresion
Rule 35    expresion_aritmetica -> expresion DIV expresion
Rule 36    expresion_logica -> expresion AND expresion
Rule 37    expresion_logica -> expresion OR expresion
Rule 38    expresion_comparacion -> expresion IGUAL expresion
Rule 39    expresion_comparacion -> expresion DISTINTO expresion
Rule 40    expresion_comparacion -> expresion MAYOR expresion
Rule 41    expresion_comparacion -> expresion MAYORIGUAL expresion
Rule 42    expresion_comparacion -> expresion MENOR expresion
Rule 43    expresion_comparacion -> expresion MENORIGUAL expresion
Rule 44    condicional -> IF APAREN expresion CPAREN ALLAVE declaraciones CLLAVE
Rule 45    condicional -> IF APAREN expresion CPAREN ALLAVE declaraciones CLLAVE ELSE ALLAVE declaraciones CLLAVE
Rule 46    asignacion_for -> ID ASIGNAR expresion
Rule 47    iteracion -> WHILE APAREN expresion CPAREN ALLAVE declaraciones CLLAVE
Rule 48    iteracion -> DO ALLAVE declaraciones CLLAVE WHILE APAREN expresion CPAREN PUNTOCOMA
Rule 49    iteracion -> FOR APAREN asignacion_for PUNTOCOMA expresion PUNTOCOMA asignacion_for CPAREN ALLAVE declaraciones CLLAVE
Rule 50    impresion -> PRINTF APAREN CADENA CPAREN PUNTOCOMA
Rule 51    impresion -> PRINTF APAREN ID CPAREN PUNTOCOMA
Rule 52    entrada -> SCANF APAREN ID CPAREN PUNTOCOMA
Rule 53    constante -> NUMERO
Rule 54    constante -> CADENA

Terminals, with rules where they appear

ACORCHETE            : 
ALLAVE               : 4 44 45 45 47 48 49
AMPERSANT            : 
AND                  : 36
APAREN               : 4 44 45 47 48 49 50 51 52
APOSTROFE            : 
ASIGNAR              : 24 26 46
BREAK                : 
CADENA               : 50 54
CASE                 : 
CCORCHETE            : 
CHAR                 : 14
CLLAVE               : 4 44 45 45 47 48 49
COMA                 : 9
COMENTARIO           : 
COMILLAS             : 
COMMENTS             : 
COMMENTS_C99         : 
CONST                : 
CONTINUE             : 
CPAREN               : 4 44 45 47 48 49 50 51 52
DISTINTO             : 39
DIV                  : 35
DO                   : 48
DOSPUNTOS            : 
DPUNTOS_DPUNTOS      : 
ELSE                 : 45
FLOAT                : 15
FOR                  : 49
FUNCT_FLECHA         : 
HASHTAG              : 
ID                   : 4 5 12 24 25 26 30 46 51 52
IF                   : 44 45
IGUAL                : 38
INCREMENTO           : 
INT                  : 13
MASMAS               : 
MAYOR                : 40
MAYORIGUAL           : 41
MENOR                : 42
MENORIGUAL           : 43
MENOSMENOS           : 
MULTI                : 34
NOT                  : 
NUMERO               : 53
OR                   : 37
PRINTF               : 50 51
PUNTO                : 
PUNTOCOMA            : 5 6 24 25 26 48 49 49 50 51 52
RESTA                : 33
RETURN               : 5 6
SCANF                : 52
STRUCT               : 
SUMA                 : 32
SWITCH               : 
TYPEDEF              : 
WHILE                : 47 48
XOR                  : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 18
asignacion_for       : 49 49
condicional          : 20
constante            : 31
declara              : 19
declaracion          : 16 17
declaraciones        : 4 17 44 45 45 47 48 49
empty                : 7 10
entrada              : 23
expresion            : 6 24 26 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 45 46 47 48 49
expresion_aritmetica : 27
expresion_comparacion : 29
expresion_logica     : 28
funcion              : 2 3
funciones            : 1 3
impresion            : 22
iteracion            : 21
parametro            : 8 9
parametros           : 4 9
programa             : 0
return               : 4
tipo_dato            : 4 12 25 26

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funciones
    (2) funciones -> . funcion
    (3) funciones -> . funciones funcion
    (4) funcion -> . tipo_dato ID APAREN parametros CPAREN ALLAVE declaraciones return CLLAVE
    (13) tipo_dato -> . INT
    (14) tipo_dato -> . CHAR
    (15) tipo_dato -> . FLOAT

    INT             shift and go to state 5
    CHAR            shift and go to state 6
    FLOAT           shift and go to state 7

    programa                       shift and go to state 1
    funciones                      shift and go to state 2
    funcion                        shift and go to state 3
    tipo_dato                      shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funciones .
    (3) funciones -> funciones . funcion
    (4) funcion -> . tipo_dato ID APAREN parametros CPAREN ALLAVE declaraciones return CLLAVE
    (13) tipo_dato -> . INT
    (14) tipo_dato -> . CHAR
    (15) tipo_dato -> . FLOAT

    $end            reduce using rule 1 (programa -> funciones .)
    INT             shift and go to state 5
    CHAR            shift and go to state 6
    FLOAT           shift and go to state 7

    funcion                        shift and go to state 8
    tipo_dato                      shift and go to state 4

state 3

    (2) funciones -> funcion .

    INT             reduce using rule 2 (funciones -> funcion .)
    CHAR            reduce using rule 2 (funciones -> funcion .)
    FLOAT           reduce using rule 2 (funciones -> funcion .)
    $end            reduce using rule 2 (funciones -> funcion .)


state 4

    (4) funcion -> tipo_dato . ID APAREN parametros CPAREN ALLAVE declaraciones return CLLAVE

    ID              shift and go to state 9


state 5

    (13) tipo_dato -> INT .

    ID              reduce using rule 13 (tipo_dato -> INT .)


state 6

    (14) tipo_dato -> CHAR .

    ID              reduce using rule 14 (tipo_dato -> CHAR .)


state 7

    (15) tipo_dato -> FLOAT .

    ID              reduce using rule 15 (tipo_dato -> FLOAT .)


state 8

    (3) funciones -> funciones funcion .

    INT             reduce using rule 3 (funciones -> funciones funcion .)
    CHAR            reduce using rule 3 (funciones -> funciones funcion .)
    FLOAT           reduce using rule 3 (funciones -> funciones funcion .)
    $end            reduce using rule 3 (funciones -> funciones funcion .)


state 9

    (4) funcion -> tipo_dato ID . APAREN parametros CPAREN ALLAVE declaraciones return CLLAVE

    APAREN          shift and go to state 10


state 10

    (4) funcion -> tipo_dato ID APAREN . parametros CPAREN ALLAVE declaraciones return CLLAVE
    (8) parametros -> . parametro
    (9) parametros -> . parametro COMA parametros
    (10) parametros -> . empty
    (12) parametro -> . tipo_dato ID
    (11) empty -> .
    (13) tipo_dato -> . INT
    (14) tipo_dato -> . CHAR
    (15) tipo_dato -> . FLOAT

    CPAREN          reduce using rule 11 (empty -> .)
    INT             shift and go to state 5
    CHAR            shift and go to state 6
    FLOAT           shift and go to state 7

    tipo_dato                      shift and go to state 11
    parametros                     shift and go to state 12
    parametro                      shift and go to state 13
    empty                          shift and go to state 14

state 11

    (12) parametro -> tipo_dato . ID

    ID              shift and go to state 15


state 12

    (4) funcion -> tipo_dato ID APAREN parametros . CPAREN ALLAVE declaraciones return CLLAVE

    CPAREN          shift and go to state 16


state 13

    (8) parametros -> parametro .
    (9) parametros -> parametro . COMA parametros

    CPAREN          reduce using rule 8 (parametros -> parametro .)
    COMA            shift and go to state 17


state 14

    (10) parametros -> empty .

    CPAREN          reduce using rule 10 (parametros -> empty .)


state 15

    (12) parametro -> tipo_dato ID .

    COMA            reduce using rule 12 (parametro -> tipo_dato ID .)
    CPAREN          reduce using rule 12 (parametro -> tipo_dato ID .)


state 16

    (4) funcion -> tipo_dato ID APAREN parametros CPAREN . ALLAVE declaraciones return CLLAVE

    ALLAVE          shift and go to state 18


state 17

    (9) parametros -> parametro COMA . parametros
    (8) parametros -> . parametro
    (9) parametros -> . parametro COMA parametros
    (10) parametros -> . empty
    (12) parametro -> . tipo_dato ID
    (11) empty -> .
    (13) tipo_dato -> . INT
    (14) tipo_dato -> . CHAR
    (15) tipo_dato -> . FLOAT

    CPAREN          reduce using rule 11 (empty -> .)
    INT             shift and go to state 5
    CHAR            shift and go to state 6
    FLOAT           shift and go to state 7

    parametro                      shift and go to state 13
    parametros                     shift and go to state 19
    empty                          shift and go to state 14
    tipo_dato                      shift and go to state 11

state 18

    (4) funcion -> tipo_dato ID APAREN parametros CPAREN ALLAVE . declaraciones return CLLAVE
    (16) declaraciones -> . declaracion
    (17) declaraciones -> . declaraciones declaracion
    (18) declaracion -> . asignacion
    (19) declaracion -> . declara
    (20) declaracion -> . condicional
    (21) declaracion -> . iteracion
    (22) declaracion -> . impresion
    (23) declaracion -> . entrada
    (24) asignacion -> . ID ASIGNAR expresion PUNTOCOMA
    (25) declara -> . tipo_dato ID PUNTOCOMA
    (26) declara -> . tipo_dato ID ASIGNAR expresion PUNTOCOMA
    (44) condicional -> . IF APAREN expresion CPAREN ALLAVE declaraciones CLLAVE
    (45) condicional -> . IF APAREN expresion CPAREN ALLAVE declaraciones CLLAVE ELSE ALLAVE declaraciones CLLAVE
    (47) iteracion -> . WHILE APAREN expresion CPAREN ALLAVE declaraciones CLLAVE
    (48) iteracion -> . DO ALLAVE declaraciones CLLAVE WHILE APAREN expresion CPAREN PUNTOCOMA
    (49) iteracion -> . FOR APAREN asignacion_for PUNTOCOMA expresion PUNTOCOMA asignacion_for CPAREN ALLAVE declaraciones CLLAVE
    (50) impresion -> . PRINTF APAREN CADENA CPAREN PUNTOCOMA
    (51) impresion -> . PRINTF APAREN ID CPAREN PUNTOCOMA
    (52) entrada -> . SCANF APAREN ID CPAREN PUNTOCOMA
    (13) tipo_dato -> . INT
    (14) tipo_dato -> . CHAR
    (15) tipo_dato -> . FLOAT

    ID              shift and go to state 21
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    FOR             shift and go to state 33
    PRINTF          shift and go to state 34
    SCANF           shift and go to state 35
    INT             shift and go to state 5
    CHAR            shift and go to state 6
    FLOAT           shift and go to state 7

    tipo_dato                      shift and go to state 20
    declaraciones                  shift and go to state 22
    declaracion                    shift and go to state 23
    asignacion                     shift and go to state 24
    declara                        shift and go to state 25
    condicional                    shift and go to state 26
    iteracion                      shift and go to state 27
    impresion                      shift and go to state 28
    entrada                        shift and go to state 29

state 19

    (9) parametros -> parametro COMA parametros .

    CPAREN          reduce using rule 9 (parametros -> parametro COMA parametros .)


state 20

    (25) declara -> tipo_dato . ID PUNTOCOMA
    (26) declara -> tipo_dato . ID ASIGNAR expresion PUNTOCOMA

    ID              shift and go to state 36


state 21

    (24) asignacion -> ID . ASIGNAR expresion PUNTOCOMA

    ASIGNAR         shift and go to state 37


state 22

    (4) funcion -> tipo_dato ID APAREN parametros CPAREN ALLAVE declaraciones . return CLLAVE
    (17) declaraciones -> declaraciones . declaracion
    (5) return -> . RETURN ID PUNTOCOMA
    (6) return -> . RETURN expresion PUNTOCOMA
    (7) return -> . empty
    (18) declaracion -> . asignacion
    (19) declaracion -> . declara
    (20) declaracion -> . condicional
    (21) declaracion -> . iteracion
    (22) declaracion -> . impresion
    (23) declaracion -> . entrada
    (11) empty -> .
    (24) asignacion -> . ID ASIGNAR expresion PUNTOCOMA
    (25) declara -> . tipo_dato ID PUNTOCOMA
    (26) declara -> . tipo_dato ID ASIGNAR expresion PUNTOCOMA
    (44) condicional -> . IF APAREN expresion CPAREN ALLAVE declaraciones CLLAVE
    (45) condicional -> . IF APAREN expresion CPAREN ALLAVE declaraciones CLLAVE ELSE ALLAVE declaraciones CLLAVE
    (47) iteracion -> . WHILE APAREN expresion CPAREN ALLAVE declaraciones CLLAVE
    (48) iteracion -> . DO ALLAVE declaraciones CLLAVE WHILE APAREN expresion CPAREN PUNTOCOMA
    (49) iteracion -> . FOR APAREN asignacion_for PUNTOCOMA expresion PUNTOCOMA asignacion_for CPAREN ALLAVE declaraciones CLLAVE
    (50) impresion -> . PRINTF APAREN CADENA CPAREN PUNTOCOMA
    (51) impresion -> . PRINTF APAREN ID CPAREN PUNTOCOMA
    (52) entrada -> . SCANF APAREN ID CPAREN PUNTOCOMA
    (13) tipo_dato -> . INT
    (14) tipo_dato -> . CHAR
    (15) tipo_dato -> . FLOAT

    RETURN          shift and go to state 40
    CLLAVE          reduce using rule 11 (empty -> .)
    ID              shift and go to state 21
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    FOR             shift and go to state 33
    PRINTF          shift and go to state 34
    SCANF           shift and go to state 35
    INT             shift and go to state 5
    CHAR            shift and go to state 6
    FLOAT           shift and go to state 7

    tipo_dato                      shift and go to state 20
    return                         shift and go to state 38
    declaracion                    shift and go to state 39
    empty                          shift and go to state 41
    asignacion                     shift and go to state 24
    declara                        shift and go to state 25
    condicional                    shift and go to state 26
    iteracion                      shift and go to state 27
    impresion                      shift and go to state 28
    entrada                        shift and go to state 29

state 23

    (16) declaraciones -> declaracion .

    RETURN          reduce using rule 16 (declaraciones -> declaracion .)
    ID              reduce using rule 16 (declaraciones -> declaracion .)
    IF              reduce using rule 16 (declaraciones -> declaracion .)
    WHILE           reduce using rule 16 (declaraciones -> declaracion .)
    DO              reduce using rule 16 (declaraciones -> declaracion .)
    FOR             reduce using rule 16 (declaraciones -> declaracion .)
    PRINTF          reduce using rule 16 (declaraciones -> declaracion .)
    SCANF           reduce using rule 16 (declaraciones -> declaracion .)
    INT             reduce using rule 16 (declaraciones -> declaracion .)
    CHAR            reduce using rule 16 (declaraciones -> declaracion .)
    FLOAT           reduce using rule 16 (declaraciones -> declaracion .)
    CLLAVE          reduce using rule 16 (declaraciones -> declaracion .)


state 24

    (18) declaracion -> asignacion .

    RETURN          reduce using rule 18 (declaracion -> asignacion .)
    ID              reduce using rule 18 (declaracion -> asignacion .)
    IF              reduce using rule 18 (declaracion -> asignacion .)
    WHILE           reduce using rule 18 (declaracion -> asignacion .)
    DO              reduce using rule 18 (declaracion -> asignacion .)
    FOR             reduce using rule 18 (declaracion -> asignacion .)
    PRINTF          reduce using rule 18 (declaracion -> asignacion .)
    SCANF           reduce using rule 18 (declaracion -> asignacion .)
    INT             reduce using rule 18 (declaracion -> asignacion .)
    CHAR            reduce using rule 18 (declaracion -> asignacion .)
    FLOAT           reduce using rule 18 (declaracion -> asignacion .)
    CLLAVE          reduce using rule 18 (declaracion -> asignacion .)


state 25

    (19) declaracion -> declara .

    RETURN          reduce using rule 19 (declaracion -> declara .)
    ID              reduce using rule 19 (declaracion -> declara .)
    IF              reduce using rule 19 (declaracion -> declara .)
    WHILE           reduce using rule 19 (declaracion -> declara .)
    DO              reduce using rule 19 (declaracion -> declara .)
    FOR             reduce using rule 19 (declaracion -> declara .)
    PRINTF          reduce using rule 19 (declaracion -> declara .)
    SCANF           reduce using rule 19 (declaracion -> declara .)
    INT             reduce using rule 19 (declaracion -> declara .)
    CHAR            reduce using rule 19 (declaracion -> declara .)
    FLOAT           reduce using rule 19 (declaracion -> declara .)
    CLLAVE          reduce using rule 19 (declaracion -> declara .)


state 26

    (20) declaracion -> condicional .

    RETURN          reduce using rule 20 (declaracion -> condicional .)
    ID              reduce using rule 20 (declaracion -> condicional .)
    IF              reduce using rule 20 (declaracion -> condicional .)
    WHILE           reduce using rule 20 (declaracion -> condicional .)
    DO              reduce using rule 20 (declaracion -> condicional .)
    FOR             reduce using rule 20 (declaracion -> condicional .)
    PRINTF          reduce using rule 20 (declaracion -> condicional .)
    SCANF           reduce using rule 20 (declaracion -> condicional .)
    INT             reduce using rule 20 (declaracion -> condicional .)
    CHAR            reduce using rule 20 (declaracion -> condicional .)
    FLOAT           reduce using rule 20 (declaracion -> condicional .)
    CLLAVE          reduce using rule 20 (declaracion -> condicional .)


state 27

    (21) declaracion -> iteracion .

    RETURN          reduce using rule 21 (declaracion -> iteracion .)
    ID              reduce using rule 21 (declaracion -> iteracion .)
    IF              reduce using rule 21 (declaracion -> iteracion .)
    WHILE           reduce using rule 21 (declaracion -> iteracion .)
    DO              reduce using rule 21 (declaracion -> iteracion .)
    FOR             reduce using rule 21 (declaracion -> iteracion .)
    PRINTF          reduce using rule 21 (declaracion -> iteracion .)
    SCANF           reduce using rule 21 (declaracion -> iteracion .)
    INT             reduce using rule 21 (declaracion -> iteracion .)
    CHAR            reduce using rule 21 (declaracion -> iteracion .)
    FLOAT           reduce using rule 21 (declaracion -> iteracion .)
    CLLAVE          reduce using rule 21 (declaracion -> iteracion .)


state 28

    (22) declaracion -> impresion .

    RETURN          reduce using rule 22 (declaracion -> impresion .)
    ID              reduce using rule 22 (declaracion -> impresion .)
    IF              reduce using rule 22 (declaracion -> impresion .)
    WHILE           reduce using rule 22 (declaracion -> impresion .)
    DO              reduce using rule 22 (declaracion -> impresion .)
    FOR             reduce using rule 22 (declaracion -> impresion .)
    PRINTF          reduce using rule 22 (declaracion -> impresion .)
    SCANF           reduce using rule 22 (declaracion -> impresion .)
    INT             reduce using rule 22 (declaracion -> impresion .)
    CHAR            reduce using rule 22 (declaracion -> impresion .)
    FLOAT           reduce using rule 22 (declaracion -> impresion .)
    CLLAVE          reduce using rule 22 (declaracion -> impresion .)


state 29

    (23) declaracion -> entrada .

    RETURN          reduce using rule 23 (declaracion -> entrada .)
    ID              reduce using rule 23 (declaracion -> entrada .)
    IF              reduce using rule 23 (declaracion -> entrada .)
    WHILE           reduce using rule 23 (declaracion -> entrada .)
    DO              reduce using rule 23 (declaracion -> entrada .)
    FOR             reduce using rule 23 (declaracion -> entrada .)
    PRINTF          reduce using rule 23 (declaracion -> entrada .)
    SCANF           reduce using rule 23 (declaracion -> entrada .)
    INT             reduce using rule 23 (declaracion -> entrada .)
    CHAR            reduce using rule 23 (declaracion -> entrada .)
    FLOAT           reduce using rule 23 (declaracion -> entrada .)
    CLLAVE          reduce using rule 23 (declaracion -> entrada .)


state 30

    (44) condicional -> IF . APAREN expresion CPAREN ALLAVE declaraciones CLLAVE
    (45) condicional -> IF . APAREN expresion CPAREN ALLAVE declaraciones CLLAVE ELSE ALLAVE declaraciones CLLAVE

    APAREN          shift and go to state 42


state 31

    (47) iteracion -> WHILE . APAREN expresion CPAREN ALLAVE declaraciones CLLAVE

    APAREN          shift and go to state 43


state 32

    (48) iteracion -> DO . ALLAVE declaraciones CLLAVE WHILE APAREN expresion CPAREN PUNTOCOMA

    ALLAVE          shift and go to state 44


state 33

    (49) iteracion -> FOR . APAREN asignacion_for PUNTOCOMA expresion PUNTOCOMA asignacion_for CPAREN ALLAVE declaraciones CLLAVE

    APAREN          shift and go to state 45


state 34

    (50) impresion -> PRINTF . APAREN CADENA CPAREN PUNTOCOMA
    (51) impresion -> PRINTF . APAREN ID CPAREN PUNTOCOMA

    APAREN          shift and go to state 46


state 35

    (52) entrada -> SCANF . APAREN ID CPAREN PUNTOCOMA

    APAREN          shift and go to state 47


state 36

    (25) declara -> tipo_dato ID . PUNTOCOMA
    (26) declara -> tipo_dato ID . ASIGNAR expresion PUNTOCOMA

    PUNTOCOMA       shift and go to state 48
    ASIGNAR         shift and go to state 49


state 37

    (24) asignacion -> ID ASIGNAR . expresion PUNTOCOMA
    (27) expresion -> . expresion_aritmetica
    (28) expresion -> . expresion_logica
    (29) expresion -> . expresion_comparacion
    (30) expresion -> . ID
    (31) expresion -> . constante
    (32) expresion_aritmetica -> . expresion SUMA expresion
    (33) expresion_aritmetica -> . expresion RESTA expresion
    (34) expresion_aritmetica -> . expresion MULTI expresion
    (35) expresion_aritmetica -> . expresion DIV expresion
    (36) expresion_logica -> . expresion AND expresion
    (37) expresion_logica -> . expresion OR expresion
    (38) expresion_comparacion -> . expresion IGUAL expresion
    (39) expresion_comparacion -> . expresion DISTINTO expresion
    (40) expresion_comparacion -> . expresion MAYOR expresion
    (41) expresion_comparacion -> . expresion MAYORIGUAL expresion
    (42) expresion_comparacion -> . expresion MENOR expresion
    (43) expresion_comparacion -> . expresion MENORIGUAL expresion
    (53) constante -> . NUMERO
    (54) constante -> . CADENA

    ID              shift and go to state 50
    NUMERO          shift and go to state 56
    CADENA          shift and go to state 57

    expresion                      shift and go to state 51
    expresion_aritmetica           shift and go to state 52
    expresion_logica               shift and go to state 53
    expresion_comparacion          shift and go to state 54
    constante                      shift and go to state 55

state 38

    (4) funcion -> tipo_dato ID APAREN parametros CPAREN ALLAVE declaraciones return . CLLAVE

    CLLAVE          shift and go to state 58


state 39

    (17) declaraciones -> declaraciones declaracion .

    RETURN          reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    ID              reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    IF              reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    WHILE           reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    DO              reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    FOR             reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    PRINTF          reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    SCANF           reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    INT             reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    CHAR            reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    FLOAT           reduce using rule 17 (declaraciones -> declaraciones declaracion .)
    CLLAVE          reduce using rule 17 (declaraciones -> declaraciones declaracion .)


state 40

    (5) return -> RETURN . ID PUNTOCOMA
    (6) return -> RETURN . expresion PUNTOCOMA
    (27) expresion -> . expresion_aritmetica
    (28) expresion -> . expresion_logica
    (29) expresion -> . expresion_comparacion
    (30) expresion -> . ID
    (31) expresion -> . constante
    (32) expresion_aritmetica -> . expresion SUMA expresion
    (33) expresion_aritmetica -> . expresion RESTA expresion
    (34) expresion_aritmetica -> . expresion MULTI expresion
    (35) expresion_aritmetica -> . expresion DIV expresion
    (36) expresion_logica -> . expresion AND expresion
    (37) expresion_logica -> . expresion OR expresion
    (38) expresion_comparacion -> . expresion IGUAL expresion
    (39) expresion_comparacion -> . expresion DISTINTO expresion
    (40) expresion_comparacion -> . expresion MAYOR expresion
    (41) expresion_comparacion -> . expresion MAYORIGUAL expresion
    (42) expresion_comparacion -> . expresion MENOR expresion
    (43) expresion_comparacion -> . expresion MENORIGUAL expresion
    (53) constante -> . NUMERO
    (54) constante -> . CADENA

    ID              shift and go to state 59
    NUMERO          shift and go to state 56
    CADENA          shift and go to state 57

    expresion                      shift and go to state 60
    expresion_aritmetica           shift and go to state 52
    expresion_logica               shift and go to state 53
    expresion_comparacion          shift and go to state 54
    constante                      shift and go to state 55

state 41

    (7) return -> empty .

    CLLAVE          reduce using rule 7 (return -> empty .)


state 42
